fix align in rocker control

--- a/media/style/menuoptions.css
+++ b/media/style/menuoptions.css
@@ -8,7 +8,7 @@ div.rtup { float:right; text-align:center; font-size:14px;
     background: url(../images/rocker_rt_up.png); width:84px; height:31px; }
 div.rtdown { float:right; text-align:center; font-size:14px;
     background: url(../images/rocker_rt_down.png); width:84px; height:31px; }
-div.rocker span.innertext { line-height:31px;}
+div.rocker span.innertext { line-height:31px; vertical-align: 50%; }
 div.rocker div.ltup:hover, div.rtup:hover { color: yellow; font-style:italic; }
 
 span table.HdrFilter, table.CrEaTeDtAbLeStYlE { 
